[package]
name = "cw-utils"
version = "1.0.1"
authors = ["Ethan Frey <ethanfrey@users.noreply.github.com>"]
edition = "2021"
description = "Common helpers for other cw specs"
license = "Apache-2.0"
repository = "https://github.com/CosmWasm/cw-utils"
homepage = "https://cosmwasm.com"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cosmwasm-schema = { git = "https://github.com/oraichain/cosmwasm.git" }
cosmwasm-std = { git = "https://github.com/oraichain/cosmwasm.git", default-features = false }
cw-storage-plus = { git ="https://github.com/oraichain/cw-storage-plus.git" }
schemars = "0.8.3"
semver = "1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = "1.0.23"

[dev-dependencies]
prost = "0.11.0"
anyhow = "1.0.65" # Not used directly but prost-derive does not set a sufficiently high anyhow version
